<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4EEB7"
        android:backgroundTint="#F4EEB7"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071">

        <TextView
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/dialog_title"
            android:textAlignment="center"
            android:textColor="#0B0A0A"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/dialog_name"
            android:textAlignment="center"
            android:textColor="#0B0A0A"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textSize="20sp" />

        <TextView
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/dialog_email"
            android:textAlignment="center"
            android:textColor="#0C0C0C"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>