<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FBFBFB">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FAF6F6"
        android:backgroundTint="#FAF6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#BAB9B9"
                android:backgroundTint="#BAB9B9"
                android:text="@string/amenities"
                android:textAlignment="viewStart"
                android:textColor="#1F2935"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#BAB9B9"
                android:backgroundTint="#BAB9B9"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_wifi_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/wifi"
                    android:textColor="#090808"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/baseline_wine_bar_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/bar"
                    android:textColor="#090808"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#BAB9B9"
                android:backgroundTint="#BAB9B9"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_restaurant_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/res"
                    android:textColor="#090808"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="97dp"
                    android:src="@drawable/baseline_pets_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/pets"
                    android:textColor="#090808"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#BAB9B9"
                android:backgroundTint="#BAB9B9"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_keyboard_arrow_right_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/camera"
                    android:textColor="#090808"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/baseline_car_rental_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/valet"
                    android:textColor="#090808"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#BAB9B9"
                android:backgroundTint="#BAB9B9"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_keyboard_arrow_right_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/atm"
                    android:textColor="#090808"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/baseline_keyboard_arrow_right_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/cool"
                    android:textColor="#090808"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#BAB9B9"
                android:backgroundTint="#BAB9B9"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_outdoor_grill_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/grill"
                    android:textColor="#090808"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="63dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="65dp"
                    android:src="@drawable/baseline_meeting_room_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/hall"
                    android:textColor="#090808"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#BAB9B9"
                android:backgroundTint="#BAB9B9"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_room_service_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/roomservice"
                    android:textColor="#090808"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/baseline_keyboard_arrow_right_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/deck"
                    android:textColor="#090808"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#BAB9B9"
                android:backgroundTint="#BAB9B9"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_keyboard_arrow_right_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/houseKeeping"
                    android:textColor="#090808"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/baseline_pool_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/pool"
                    android:textColor="#090808"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#BAB9B9"
                android:backgroundTint="#BAB9B9"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_meeting_room_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/event"
                    android:textColor="#090808"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/baseline_spa_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="8dp"
                    android:text="@string/spa"
                    android:textColor="#090808"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:background="@color/white"
                android:fontFamily="cursive"
                android:paddingLeft="8dp"
                android:text="@string/activity"
                android:textAlignment="center"
                android:textColor="#3E983E"
                android:textSize="34sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="282dp"
                android:background="@color/white"
                android:fontFamily="sans-serif-condensed-medium"
                android:paddingLeft="8dp"
                android:text="@string/activity_details"
                android:textAlignment="center"
                android:textColor="#3C9C3C"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif-black"
                android:foreground="?attr/selectableItemBackground"
                android:onClick="familyActivity"
                android:paddingLeft="8dp"
                android:text="@string/more_details"
                android:textAlignment="center"
                android:textColor="#342FD5"
                android:textSize="20sp" />


            <Button
                android:layout_width="190dp"
                android:layout_height="62dp"
                android:layout_marginStart="105dp"
                android:backgroundTint="#090709"
                android:ellipsize="end"
                android:fontFamily="sans-serif-black"
                android:foregroundTint="#F1EBEB"
                android:onClick="ReservePage"
                android:text="@string/book"
                android:textColor="#EDE8E8"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>